# qt3d_and_scenegraph_conflict

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Platform.cmake  README.md  VersionNumber.cmake  Win32LaunchScripts.cmake
BuildScripts/: jenkins_linux64_ci.sh  jenkins_win64_ci.bat  suppressions.txt
app/: CMakeLists.txt  main.cpp  qml.qrc
app/data/: Ship_meteor_N010311.3DS
app/include/app/: CircularOpenGLBuffer.h  Memory.hpp  Point.h  helpers.h
app/include/app/qobjs/: GroundModel.h  GroundRenderer.h  Settings.h  Viewport.h
app/qml/: ComputeMaterial.qml  Ground.qml  Ship.qml  ShipScene.qml  Theme.qml  ViewportFrameGraphs.qml  ViewportSlider.qml  main.qml
app/qml/Cameras/: BackCamera.qml  CameraSet.qml  SimpleCamera.qml  TopCamera.qml  UserCamera.qml  cameras.qrc
app/shaders/: pointcloud.comp  pointcloud.frag  pointcloud.vert
app/src/: CircularOpenGLBuffer.cpp  helpers.cpp
app/src/qobjs/: GroundModel.cpp  GroundRenderer.cpp  Viewport.cpp
test/: testGUI.cpp
